--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,7 +31,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        GRAFANA_IMAGE: ${{fromJson(needs.resolve-versions.outputs.matrix)}}
+        GRAFANA_IMAGE:
+          [
+            { name: 'grafana-dev', version: '10.4.0-160354' },
+            { name: 'grafana', version: '10.3.1' },
+            { name: 'grafana', version: '10.2.3' },
+            { name: 'grafana', version: '10.1.6' },
+            { name: 'grafana', version: '10.0.10' },
+            { name: 'grafana', version: '9.5.15' },
+            { name: 'grafana', version: '9.4.2' },
+            { name: 'grafana', version: '9.3.2' },
+            { name: 'grafana', version: '9.2.2' },
+            { name: 'grafana', version: '9.1.2' },
+            { name: 'grafana', version: '9.0.2' },
+            { name: 'grafana', version: '8.5.2' },
+            { name: 'grafana', version: '8.4.2' },
+          ]
     name: ${{ matrix.GRAFANA_IMAGE.name }}@${{ matrix.GRAFANA_IMAGE.VERSION }}
     runs-on: ubuntu-latest
     steps:
