--- a/packages/pme/package.json
+++ b/packages/pme/package.json
@@ -28,5 +28,13 @@
   },
   "dependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@grafana/data": "^10.4.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.25",
+    "jest": "^29.7.0",
+    "react": "^18.2.0",
+    "ts-jest": "^29.1.2"
   }
 }
