--- a/packages/plugin-e2e/package.json
+++ b/packages/plugin-e2e/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@grafana/plugin-e2e",
+  "name": "@sandersaarond/grafana-plugin-e2e",
   "version": "0.21.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
